--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>flowers</title>
   </head>
   <body class="container">
-    <div class="night" style="text-align: center">
-      <p style="color: white; font-size: 60px">Congratulations Sunshine</p>
+    <div class="night">
+      <p style="color: white">Congratulations Sunshine</p>
     </div>
     <div class="flowers">
       <div class="flower flower--1">
