--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
   </head>
   <body class="container">
     <div class="night">
-      <p style="color: white">Congratulations Sunshine</p>
+      <p class="delayed-fade-in delay-5s" style="color: white">
+        Congratulations Sunshine
+      </p>
       <button
         type="button"
-        class="btn btn-lg wiggle text-white"
+        class="btn btn-lg text-white delayed-fade-in delay-5s wiggle-with-delay"
         data-bs-toggle="modal"
         data-bs-target="#staticBackdrop"
         style="background: linear-gradient(45deg, #ce5b87, #fc913a)"
