--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   </head>
   <body class="container">
     <div class="night">
-      <p class="delayed-fade-in delay-5s" style="color: white">
-        Congratulations Sunshine
-      </p>
+      <p class="delayed-fade-in delay-5s" style="color: white">For My Baby</p>
       <button
         type="button"
         class="btn btn-lg text-white delayed-fade-in delay-5s wiggle-with-delay"
@@ -57,12 +55,9 @@
             ></button>
           </div>
           <div class="modal-body">
-            Sunshine, congratulations on completing high school! Your journey so
-            far has been a tapestry woven with determination and brilliance, and
-            as you step into this new dawn, may your path continue to be painted
-            with the same warmth and vibrance. Here's to your radiant
-            achievement and the bright adventures awaiting you in the chapters
-            to come! 🎓☀️
+            In your eyes, constellations twinkle, A universe of love, infinite
+            and sprinkle. Your laughter, a melody, my heart's sweet song, In
+            your presence, I find where I truly belong. I love you.💖❤️💑
           </div>
         </div>
       </div>
