--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body class="container">
     <div class="night">
-      <p class="delayed-fade-in delay-5s" style="color: white">For My Baby</p>
+      <p class="delayed-fade-in delay-5s" style="color: white">Congrats</p>
       <button
         type="button"
         class="btn btn-lg text-white delayed-fade-in delay-5s wiggle-with-delay"
