--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body class="container">
     <div class="night">
-      <p class="delayed-fade-in delay-5s" style="color: white">Congrats</p>
+      <p class="delayed-fade-in delay-5s" style="color: white">For My Baby</p>
       <button
         type="button"
         class="btn btn-lg text-white delayed-fade-in delay-5s wiggle-with-delay"
@@ -55,9 +55,22 @@
             ></button>
           </div>
           <div class="modal-body">
-            In your eyes, constellations twinkle, A universe of love, infinite
-            and sprinkle. Your laughter, a melody, my heart's sweet song, In
-            your presence, I find where I truly belong. I love you.💖❤️💑
+            <p>
+              In your eyes, constellations twinkle bright, A universe of love,
+              endless in its light. Your laughter, a melody, my heart's sweet
+              song, In your presence, I know where I belong.
+            </p>
+            <p>
+              With each beat, my heart whispers your name, In your embrace, I
+              find eternal flame. Your love, a journey, tender and true, In your
+              arms, I've found my sky of blue.
+            </p>
+            <p>
+              On Valentine's Day, let our love soar high, Like birds in flight
+              beneath the azure sky. Together, we dance in the moon's soft glow,
+              Forever intertwined, our love will grow. So here's to us, in this
+              moment divine, Forever yours, my Valentine.💖❤️💑
+            </p>
           </div>
         </div>
       </div>
