--- a/index.html
+++ b/index.html
@@ -56,20 +56,36 @@
           </div>
           <div class="modal-body">
             <p>
-              In your eyes, constellations twinkle bright, A universe of love,
-              endless in its light. Your laughter, a melody, my heart's sweet
-              song, In your presence, I know where I belong.
+              <pre>
+                In your eyes, constellations twinkle bright,
+                A universe of love, endless in its light.
+                Your laughter, a melody, my heart's sweet song,
+                In your presence, I know where I belong.
+              </pre>
+
             </p>
             <p>
-              With each beat, my heart whispers your name, In your embrace, I
-              find eternal flame. Your love, a journey, tender and true, In your
-              arms, I've found my sky of blue.
+              <pre>
+                With each beat, my heart whispers your name,
+                In your embrace, I find eternal flame.
+                Your love, a journey, tender and true,
+                In your arms, I've found my sky of blue.
+              </pre>
+
             </p>
             <p>
-              On Valentine's Day, let our love soar high, Like birds in flight
-              beneath the azure sky. Together, we dance in the moon's soft glow,
-              Forever intertwined, our love will grow. So here's to us, in this
-              moment divine, Forever yours, my Valentine.💖❤️💑
+              <pre>
+                On Valentine's Day, let our love soar high,
+                Like birds in flight beneath the azure sky.
+                Together, we dance in the moon's soft glow,
+                Forever intertwined, our love will grow.
+              </pre>
+            </p>
+            <p>
+              <pre>
+                So here's to us, in this moment divine,
+                Forever yours, my Valentine.💖❤️💑
+              </pre>
             </p>
           </div>
         </div>
