--- a/index.html
+++ b/index.html
@@ -56,36 +56,26 @@
           </div>
           <div class="modal-body">
             <p>
-              <pre>
-In your eyes, constellations twinkle bright,
-A universe of love, endless in its light.
-Your laughter, a melody, my heart's sweet song,
-In your presence, I know where I belong.
-              </pre>
-
+              In your eyes, constellations twinkle bright,<br />
+              A universe of love, endless in its light.<br />
+              Your laughter, a melody, my heart's sweet song,<br />
+              In your presence, I know where I belong.
             </p>
             <p>
-              <pre>
-With each beat, my heart whispers your name,
-In your embrace, I find eternal flame.
-Your love, a journey, tender and true,
-In your arms, I've found my sky of blue.
-              </pre>
-
+              With each beat, my heart whispers your name,<br />
+              In your embrace, I find eternal flame.<br />
+              Your love, a journey, tender and true,<br />
+              In your arms, I've found my sky of blue.
             </p>
             <p>
-              <pre>
-On Valentine's Day, let our love soar high,
-Like birds in flight beneath the azure sky.
-Together, we dance in the moon's soft glow,
-Forever intertwined, our love will grow.
-              </pre>
+              On Valentine's Day, let our love soar high,<br />
+              Like birds in flight beneath the azure sky.<br />
+              Together, we dance in the moon's soft glow,<br />
+              Forever intertwined, our love will grow.
             </p>
             <p>
-              <pre>
-So here's to us, in this moment divine,
-Forever yours, my Valentine.💖❤️💑
-              </pre>
+              So here's to us, in this moment divine,<br />
+              Forever yours, my Valentine.💖❤️💑
             </p>
           </div>
         </div>
