--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               In your arms, I've found my sky of blue.
             </p>
             <p>
-              On Valentine's Day, let our love soar high,<br />
+              On this Day, let our love soar high,<br />
               Like birds in flight beneath the azure sky.<br />
               Together, we dance in the moon's soft glow,<br />
               Forever intertwined, our love will grow.
