--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body class="container">
     <div class="night">
-      <p class="delayed-fade-in delay-5s" style="color: white">For My Baby</p>
-      <button
+      <p class="delayed-fade-in delay-5s" style="color: white">Rozi</p>
+      <!-- <button
         type="button"
         class="btn btn-lg text-white delayed-fade-in delay-5s wiggle-with-delay"
         data-bs-toggle="modal"
@@ -30,7 +30,7 @@
         style="background: linear-gradient(45deg, #ce5b87, #fc913a)"
       >
         Click Me
-      </button>
+      </button> -->
     </div>
     <div
       class="modal fade"
