--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body class="container">
     <div class="night">
-      <p class="delayed-fade-in delay-5s" style="color: white"></p>
-      <!-- <button
+      <p class="delayed-fade-in delay-5s" style="color: white">My Preety</p>
+      <button
         type="button"
         class="btn btn-lg text-white delayed-fade-in delay-5s wiggle-with-delay"
         data-bs-toggle="modal"
@@ -30,7 +30,7 @@
         style="background: linear-gradient(45deg, #ce5b87, #fc913a)"
       >
         Click Me
-      </button> -->
+      </button>
     </div>
     <div
       class="modal fade"
@@ -56,26 +56,34 @@
           </div>
           <div class="modal-body">
             <p>
-              In your eyes, constellations twinkle bright,<br />
-              A universe of love, endless in its light.<br />
-              Your laughter, a melody, my heart's sweet song,<br />
-              In your presence, I know where I belong.
+              In the quiet of the evening hush,<br />
+              When moonlight spills in silver blush,<br />
+              My thoughts, like fireflies, find their flight—<br />
+              They all drift gently toward your light.
             </p>
             <p>
-              With each beat, my heart whispers your name,<br />
-              In your embrace, I find eternal flame.<br />
-              Your love, a journey, tender and true,<br />
-              In your arms, I've found my sky of blue.
+              Your name, a melody soft and true,<br />
+              Plays in my heart like morning dew<br />
+              That kisses blooms and coaxes sun—<br />
+              A love like ours has just begun.
             </p>
             <p>
-              On this Day, let our love soar high,<br />
-              Like birds in flight beneath the azure sky.<br />
-              Together, we dance in the moon's soft glow,<br />
-              Forever intertwined, our love will grow.
+              Not forged in haste, nor bound by chain,<br />
+              But born of laughter, joy, and rain.<br />
+              A steady fire, warm and deep,<br />
+              That guards my soul while I sleep.
             </p>
             <p>
-              So here's to us, in this moment divine,<br />
-              Forever yours, my Valentine.💖❤️💑
+              In your eyes, the world feels new,<br />
+              Like skies that shift from gray to blue.<br />
+              With every look, my fears grow small—<br />
+              You are my rise, my grace, my fall.
+            </p>
+            <p>
+              So take this poem, though words may fade,<br />
+              Its truth is in the love we've made.<br />
+              A story still unwritten, true—<br />
+              But every chapter starts with you.
             </p>
           </div>
         </div>
