--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               So take this poem, though words may fade,<br />
               Its truth is in the love we've made.<br />
               A story still unwritten, true—<br />
-              But every chapter starts with you.
+              But every chapter starts with you. I LOVE YOU.
             </p>
           </div>
         </div>
